[project]
name = "comfyui-joytag-tagger"
description = "A ComfyUI extension allowing the interrogation of booru tags from photographs."
version = "1.0.0"
license = "LICENSE"
dependencies = ["typing pathlib"]

[project.urls]
Repository = "https://github.com/zakack/ComfyUI-Joytag-Tagger"

[tool.comfy]
PublisherId = "zakack"
DisplayName = "ComfyUI-Joytag-Tagger"
Icon = ""
